build_log.txt
Starting >>> rosaria2
--- stderr: rosaria2
In file included from /home/loay/ROSaria2/src/rosaria2/src/rosaria2_node.cpp:22:
/opt/ros/jazzy/include/sensor_msgs/sensor_msgs/point_cloud_conversion.hpp:47:6: warning: #warning POINT_CLOUD_DEPRECATION_MESSAGE [-Wcpp]
   47 | #    warning POINT_CLOUD_DEPRECATION_MESSAGE
      |      ^~~~~~~
/home/loay/ROSaria2/src/rosaria2/src/rosaria2_node.cpp: In constructor ‘RosAriaNode::RosAriaNode()’:
/home/loay/ROSaria2/src/rosaria2/src/rosaria2_node.cpp:175:34: error: no matching function for call to ‘RosAriaNode::declare_parameter<double>(const char [12], const char [6])’
  175 |   this->declare_parameter<double>("sonar_frame", "sonar");
      |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
In file included from /opt/ros/jazzy/include/rclcpp/rclcpp/node.hpp:1663,
                 from /opt/ros/jazzy/include/rclcpp/rclcpp/executors/single_threaded_executor.hpp:28,
                 from /opt/ros/jazzy/include/rclcpp/rclcpp/executors.hpp:22,
                 from /opt/ros/jazzy/include/rclcpp/rclcpp/rclcpp.hpp:172,
                 from /home/loay/ROSaria2/src/rosaria2/src/rosaria2_node.cpp:19:
/opt/ros/jazzy/include/rclcpp/rclcpp/node_impl.hpp:246:1: note: candidate: ‘auto rclcpp::Node::declare_parameter(const std::string&, const ParameterT&, const rcl_interfaces::msg::ParameterDescriptor&, bool) [with ParameterT = double; std::string = std::__cxx11::basic_string<char>; rcl_interfaces::msg::ParameterDescriptor = rcl_interfaces::msg::ParameterDescriptor_<std::allocator<void> >]’
  246 | Node::declare_parameter(
      | ^~~~
/opt/ros/jazzy/include/rclcpp/rclcpp/node_impl.hpp:248:22: note:   no known conversion for argument 2 from ‘const char [6]’ to ‘const double&’
  248 |   const ParameterT & default_value,
      |   ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~
/opt/ros/jazzy/include/rclcpp/rclcpp/node_impl.hpp:266:1: note: candidate: ‘auto rclcpp::Node::declare_parameter(const std::string&, const rcl_interfaces::msg::ParameterDescriptor&, bool) [with ParameterT = double; std::string = std::__cxx11::basic_string<char>; rcl_interfaces::msg::ParameterDescriptor = rcl_interfaces::msg::ParameterDescriptor_<std::allocator<void> >]’
  266 | Node::declare_parameter(
      | ^~~~
/opt/ros/jazzy/include/rclcpp/rclcpp/node_impl.hpp:268:52: note:   no known conversion for argument 2 from ‘const char [6]’ to ‘const rcl_interfaces::msg::ParameterDescriptor&’ {aka ‘const rcl_interfaces::msg::ParameterDescriptor_<std::allocator<void> >&’}
  268 |   const rcl_interfaces::msg::ParameterDescriptor & parameter_descriptor,
      |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~
/home/loay/ROSaria2/src/rosaria2/src/rosaria2_node.cpp: In member function ‘void RosAriaNode::publish()’:
/home/loay/ROSaria2/src/rosaria2/src/rosaria2_node.cpp:612:29: error: ‘class ArRobot’ has no member named ‘getPoseTime’; did you mean ‘getPose’?
  612 |   ArTime pos_time = robot_->getPoseTime();
      |                             ^~~~~~~~~~~
      |                             getPose
/home/loay/ROSaria2/src/rosaria2/src/rosaria2_node.cpp:722:50: warning: ‘bool sensor_msgs::convertPointCloudToPointCloud2(const msg::PointCloud&, msg::PointCloud2&)’ is deprecated: PointCloud is deprecated as of Foxy in favor of sensor_msgs/PointCloud2. [-Wdeprecated-declarations]
  722 |       sensor_msgs::convertPointCloudToPointCloud2(cloud, cloud2);
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
/opt/ros/jazzy/include/sensor_msgs/sensor_msgs/point_cloud_conversion.hpp:81:20: note: declared here
   81 | static inline bool convertPointCloudToPointCloud2(
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/rosaria2_node.dir/build.make:76: CMakeFiles/rosaria2_node.dir/src/rosaria2_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:165: CMakeFiles/rosaria2_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
---
Failed   <<< rosaria2 [16.4s, exited with code 2]

Summary: 0 packages finished [16.8s]
  1 package failed: rosaria2
  1 package had stderr output: rosaria2
